--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
+
 
