--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,20 @@ on:
     branches: [ "main" ]
 
 jobs:
+
+  test:
+    runs-on: ubuntu-latest
+    name: Run unit tests on Java
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup JDK 21
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+      - run: mvn -f pom.xml clean test -e -X
+
   build:
     runs-on: ubuntu-latest
     steps:
