--- a/pom.xml
+++ b/pom.xml
@@ -103,13 +103,6 @@
             <version>2.3.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.1</version>
-        </dependency>
-
-
     </dependencies>
 
     <build>
@@ -119,6 +112,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
